[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/DarkTheme/Dark.theme" type="Theme" id=1]
[ext_resource path="res://Scripts/menu_pause.gd" type="Script" id=2]
[ext_resource path="res://Assets/sounds/Hop.wav" type="AudioStream" id=3]
[ext_resource path="res://Scenes/help_popup.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/sounds/Peck.wav" type="AudioStream" id=5]

[node name="Pause Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Exit Button" type="Button" parent="."]
margin_left = 26.0
margin_top = 24.0
margin_right = 137.0
margin_bottom = 64.0
theme = ExtResource( 1 )
text = "Back to Menu"

[node name="How to Play Button" type="Button" parent="."]
margin_left = 26.0
margin_top = 91.0
margin_right = 136.0
margin_bottom = 131.0
theme = ExtResource( 1 )
text = "How to Play"

[node name="Enable Kernel CheckBox" type="CheckBox" parent="."]
margin_left = 181.0
margin_top = 59.0
margin_right = 332.0
margin_bottom = 83.0
theme = ExtResource( 1 )
text = "Enable the Kernel"

[node name="Player Name Input" type="LineEdit" parent="."]
margin_left = 182.0
margin_top = 24.0
margin_right = 390.0
margin_bottom = 48.0
theme = ExtResource( 1 )
text = " Player Name"

[node name="Devolution Slider" type="HSlider" parent="."]
margin_left = 185.0
margin_top = 117.0
margin_right = 342.0
margin_bottom = 149.0
max_value = 4.0
__meta__ = {
"_editor_description_": "Devolution Stage"
}

[node name="Devolution Label" type="RichTextLabel" parent="."]
margin_left = 183.0
margin_top = 95.0
margin_right = 360.0
margin_bottom = 118.0
theme = ExtResource( 1 )
text = " Stage of Devolution:"

[node name="AudioClick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="AudioQuit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="InstructionsDialog" parent="." instance=ExtResource( 4 )]

[connection signal="pressed" from="Exit Button" to="." method="_on_Exit_Button_pressed"]
[connection signal="pressed" from="How to Play Button" to="." method="_on_How_to_Play_Button_pressed"]
